Avoid overflow of single value inside SelectField in FF [MC-2784]

--- a/packages/ui/src/Select/SelectField.module.scss
+++ b/packages/ui/src/Select/SelectField.module.scss
@@ -6,6 +6,7 @@ $menuMargin: c.$grid * 3;
 $selectContainer: ':global .hz-select-field';
 $selectControl: ':global .hz-select-field__control';
 $selectValueContainer: ':global .hz-select-field__value-container';
+$selectSingleValue: ':global .hz-select-field__single-value';
 $selectMenuPortal: ':global .hz-select-field__menu-portal';
 $selectMenu: ':global .hz-select-field__menu';
 $selectMenuList: ':global .hz-select-field__menu-list';
@@ -37,6 +38,10 @@ $selectGroupHeading: ':global .hz-select-field__group-heading';
 
   #{$selectValueContainer} {
     padding: c.$grid * 1.375 0;
+
+    #{$selectSingleValue} {
+      position: absolute;
+    }
   }
 
   #{$selectControl} {
